k8s/wshoto/tmp/ns-without-injection.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: no-injection
  labels:
    istio-injection: disabled
