k8s/wshoto/tmp/istio-gateway-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`platform-test.wshoto.com`) && PathPrefix(`/istio`)
      kind: Rule
      services:
      - name: istio-ingressgateway
        port: 80
      middlewares:
      - name: wshoto-header
